@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    abstract class model.Handler {
        + Handler()
        + process()
    }
  }
  

  namespace model {
    class model.NegativeHandler {
        + NegativeHandler()
        + process()
    }
  }
  

  namespace model {
    class model.PositiveHandler {
        + PositiveHandler()
        + process()
    }
  }
  

  model.Handler o-- model.Handler : processor
  model.NegativeHandler -up-|> model.Handler
  model.PositiveHandler -up-|> model.Handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
